syntax = "proto3";

package etu;

// Timestamp message
message Timestamp {
  int64 seconds = 1;
  int32 nanos = 2;
}

// Note message
message Note {
  string id = 1;
  string content = 2;
  repeated string tags = 3;
  Timestamp created_at = 4;
  Timestamp updated_at = 5;
}

// Tag message
message Tag {
  string id = 1;
  string name = 2;
  int32 count = 3;
  Timestamp created_at = 4;
}

// Request/Response messages for Notes

message ListNotesRequest {
  string search = 1;
  repeated string tags = 2;
  string start_date = 3;  // ISO 8601 format
  string end_date = 4;    // ISO 8601 format
  int32 limit = 5;
  int32 offset = 6;
}

message ListNotesResponse {
  repeated Note notes = 1;
  int32 total = 2;
  int32 limit = 3;
  int32 offset = 4;
}

message CreateNoteRequest {
  string content = 1;
  repeated string tags = 2;
}

message CreateNoteResponse {
  Note note = 1;
}

message GetNoteRequest {
  string id = 1;
}

message GetNoteResponse {
  Note note = 1;
}

message UpdateNoteRequest {
  string id = 1;
  optional string content = 2;
  repeated string tags = 3;
}

message UpdateNoteResponse {
  Note note = 1;
}

message DeleteNoteRequest {
  string id = 1;
}

message DeleteNoteResponse {
  bool success = 1;
}

// Request/Response messages for Tags

message ListTagsRequest {
  // No parameters needed
}

message ListTagsResponse {
  repeated Tag tags = 1;
}

// Service definitions

service NotesService {
  rpc ListNotes(ListNotesRequest) returns (ListNotesResponse);
  rpc CreateNote(CreateNoteRequest) returns (CreateNoteResponse);
  rpc GetNote(GetNoteRequest) returns (GetNoteResponse);
  rpc UpdateNote(UpdateNoteRequest) returns (UpdateNoteResponse);
  rpc DeleteNote(DeleteNoteRequest) returns (DeleteNoteResponse);
}

service TagsService {
  rpc ListTags(ListTagsRequest) returns (ListTagsResponse);
}
